<resources>
    <string name="app_name">Pace</string>
    <string name="web_client_id">267595921848-qa7i4b1r8ogit5gi0tepl5cmo6jl8ihs.apps.googleusercontent.com</string>
    <string name="sign_up_button">Sign up with Google</string>
    <string name="google_logo_desc">Google icon</string>
    <string name="pace_logo_desc">Pace Logo</string>
    <string name="profile_wallpaper">profile wallpaper</string>
    <string name="logout_button">logout</string>
    <string name="add_workout">Add Workout</string>
    <string name="select_date">Select Date</string>
    <string name="workout_name">Workout Name</string>
    <string name="gym_name">Gym Name</string>
    <string name="add_exercise">Add Exercise</string>
    <string name="exercise_name">Ex Name</string>
    <string name="kg">Kg</string>
    <string name="reps">Reps</string>
    <string name="create_workout">Create Workout</string>
    <string name="go_back">Back</string>
    <string name="delete">Delete</string>
    <string name="x">X</string>
    <string name="delete_workout">Delete Workout</string>
    <string name="save">Save</string>
    <string name="reuse_workout">Reuse workout</string>
</resources>