<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <EditText
            android:id="@+id/workoutName"
            android:layout_width="290dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:hint="@string/workout_name"
            android:importantForAutofill="no"
            android:inputType="text" />

        <EditText
            android:id="@+id/gymName"
            android:layout_width="290dp"
            android:layout_height="60dp"
            android:hint="@string/gym_name"
            android:importantForAutofill="no"
            android:inputType="text"
            android:layout_gravity="center" />

        <!-- Container for Dynamic Exercise Fields -->
        <LinearLayout
            android:id="@+id/exercisesContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="16dp">
            <!-- Dynamic exercises will be added here -->
        </LinearLayout>

        <Button
            android:id="@+id/addExerciseButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_exercise"
            android:layout_gravity="center"/>

        <Button
            android:id="@+id/btnCreateWorkout"
            android:layout_width="268dp"
            android:layout_height="wrap_content"
            android:text="@string/create_workout"
            android:layout_gravity="center" />

        <Button
            android:id="@+id/btnGoBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/go_back" />
    </LinearLayout>
</ScrollView>
