<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="8dp">

    <EditText
        android:id="@+id/exerciseName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:hint="@string/exercise_name"
        android:inputType="text"/>

    <EditText
        android:id="@+id/kgField"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:hint="@string/kg"
        android:inputType="numberDecimal"/>

    <EditText
        android:id="@+id/repsField"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:hint="@string/reps"
        android:inputType="number"/>
</LinearLayout>
