<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/loginLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".SignInActivity">

    <ImageView
        android:id="@+id/imgPaceLogo"
        android:layout_width="fill_parent"
        android:layout_height="455dp"
        android:contentDescription="@string/pace_logo_desc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <LinearLayout
        android:id="@+id/signUpButtonLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="59dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="147dp"
        android:background="@drawable/border"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgPaceLogo">

        <ImageView
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:layout_gravity="center"
            android:layout_marginLeft="11dp"
            android:layout_marginRight="11dp"
            android:background="@color/white"
            android:contentDescription="@string/google_logo_desc"
            android:src="@drawable/google" />

        <Button
            android:id="@+id/btnSignIn"
            android:layout_width="wrap_content"
            android:minWidth="200dp"
            android:layout_height="wrap_content"
            android:minHeight="50dp"
            android:background="@color/black"
            android:rotationX="-1"
            android:text="@string/sign_up_button"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="20sp" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>


