<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/materialCardView"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imgWallpaper"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/profile_wallpaper"
            android:scaleType="centerCrop"
            android:src="@drawable/profile_wallpaper" />

        <TextView
            android:id="@+id/tvProfileName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:textSize="30sp" />

    </com.google.android.material.card.MaterialCardView>

    <Button
        android:id="@+id/btnLogout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="400dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="33dp"
        android:text="@string/logout_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/materialCardView"
        app:layout_constraintVertical_bias="1.0"
        android:backgroundTint="#DCDCDC"
        android:textColor="@color/black" />

    <Button
        android:id="@+id/btnAddWorkout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/add_workout"
        app:layout_constraintBottom_toTopOf="@+id/btnLogout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/materialCardView"
        app:layout_constraintVertical_bias="0.987"
        android:backgroundTint="@color/orange"
        android:textColor="@color/black" />

    <Button
        android:id="@+id/btnGetWorkoutsForDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_date"
        app:layout_constraintBottom_toTopOf="@+id/btnAddWorkout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/materialCardView"
        app:layout_constraintVertical_bias="0.046"
        android:backgroundTint="#DCDCDC"
        android:textColor="@color/black" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvWorkouts"
        android:layout_width="378dp"
        android:layout_height="248dp"
        android:layout_below="@id/btnGetWorkoutsForDate"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="14dp"
        app:layout_constraintBottom_toTopOf="@+id/btnAddWorkout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnGetWorkoutsForDate" />


</androidx.constraintlayout.widget.ConstraintLayout>